src/v7/downloading/2021_monthly_updates.md
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
# 2021 Monthly Updates
## January 2021 Update

Download the following HCL Connections 6.5 MT January 2021 Monthly Update package from the HCL License &amp; Delivery Portal.

| **File ID** | **File Name** | **File Description** |
| --- | --- | --- |
| HCL_Connections_MT_January_21_Update | LO100080-IC6.5.0.0_CR1a-Common-Fix.jar | HCL Connections 6.5 MT January 2021 Monthly Update |
|
The following table contains the Fix List for the Connections 6.5 MT January 2021 Monthly Update

| **Problem Description** |
| --- |
| Fixed a problem where links in unable to be added or removed from My Links in Profiles |
| Corrected the URL for the user profile for an @mention in wiki content in the mobile client |
|
**Note:** The MT monthly updates are not cumulative, and the previous monthly updates are required to be installed before installing the latest update.

## February 2021 Update

Download the following HCL Connections 6.5 MT February 2021 Monthly Update package from the HCL License &amp; Delivery Portal.

| **File ID** | **File Name** | **File Description** |
| --- | --- | --- |
| HCL_Connections_MT_February_21_Update | LO100082-IC6.5.0.0_CR1a-Common-Fix.jar | HCL Connections 6.5 MT February 2021 Monthly Update |
|
The following table contains the Fix List for the Connections 6.5 MT February 2021 Monthly Update

| **Problem Description** |
| --- |
| Fixed a problem with Homepage where the page would keep refreshing for external users |
| When push notifications are disabled in the mobile admin they are no longer being delivered |
| The APNS push certificates for 2021 for HCL Connections 6.5 MT are available in the February Update |
|
**Attention:**  There is a new version of the Update Wizard for Connections to address an issue when the Java minor version greater than 255 (ie 1.8.0_261). Download [HCL Connecitons v6.5 Update Wizard (20210224)](https://hclsoftware.flexnetoperations.com/flexnet/operationsportal/logon.do?logoff=true) from the HCL Software Licensing and Delivery Portal 


**Note:** The MT monthly updates are not cumulative, and the previous monthly updates are required to be installed before installing the latest update.

## March 2021 Update

Download the following HCL Connections 6.5 MT March 2021 Monthly Update package from the HCL License &amp; Delivery Portal.

| **File ID** | **File Name** | **File Description** |
| --- | --- | --- |
| HCL_Connections_MT_March_21_Update | LO100091-IC6.5.0.0_CR1a-Common-Fix.jar | HCL Connections 6.5 MT March 2021 Monthly Update |
|
The following table contains the Fix List for the Connections 6.5 MT March 2021 Monthly Update

| **Problem Description** |
| --- |
| Shared links for files now directs the user to the login page |
|


**Note:** The MT monthly updates are not cumulative, and the previous monthly updates are required to be installed before installing the latest update.
<?tm 1541016643182 1 HCL Connections ?>

